syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "boosey";

package reservationcommon;

message ReservationGrpc {
    string id = 1;
    string resourceId = 2;
    string reserverId = 3;
    google.protobuf.Timestamp startTime = 4;
    google.protobuf.Timestamp endTime = 5;
    string state = 6;
}